# VeeR-EL2-Tock

./: Cargo.toml
boards/: README.md
boards/veer_el2_sim/: Cargo.toml  Makefile  README.md
boards/veer_el2_sim/src/: io.rs  main.rs
chips/veer_el2/: Cargo.toml
chips/veer_el2/src/: chip.rs  io.rs  lib.rs  machine_timer.rs  pic.rs  uart.rs
